--- a/UnusedSources/test.ipynb
+++ b/UnusedSources/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
     "    theta = torch.where(y < 0, (-1) * torch.atan2(y, x), 2 * math.pi - torch.atan2(y, x))\n",
     "    return theta\n",
     "\n",
-    "def create_equirectangler_to_bottom_and_top_map(input_w, input_h, output_sqr, z):\n",
+    "def create_equirectangular_to_bottom_and_top_map(input_w, input_h, output_sqr, z):\n",
     "    x, y = torch.meshgrid(torch.linspace(-output_sqr, output_sqr-1, output_sqr), \n",
     "                          torch.linspace(-output_sqr, output_sqr-1, output_sqr),indexing='ij')\n",
     "    x, y = x.to(device), y.to(device)\n",
@@ -31,13 +31,13 @@
     "    ix = norm_theta * input_w\n",
     "    iy = norm_phi * input_h\n",
     "\n",
-    "    # Boundary handling\n",
-    "    ix = torch.where(ix >= input_w, ix - input_w, ix)\n",
-    "    iy = torch.where(iy >= input_h, iy - input_h, iy)\n",
+    "    ix = torch.remainder(ix, input_w)\n",
+    "    iy = torch.remainder(iy, input_h)\n",
     "    \n",
     "    return ix.cpu().numpy(), iy.cpu().numpy()\n",
     "\n",
-    "def create_equirectangler_to_front_and_back_map(input_w, input_h, output_sqr, x):\n",
+    "\n",
+    "def create_equirectangular_to_front_and_back_map(input_w, input_h, output_sqr, x):\n",
     "    z, y = torch.meshgrid(torch.linspace(-output_sqr, output_sqr-1, output_sqr), \n",
     "                          torch.linspace(-output_sqr, output_sqr-1, output_sqr),indexing='ij')\n",
     "    z, y = z.to(device), y.to(device)\n",
@@ -49,12 +49,13 @@
     "    ix = norm_theta * input_w\n",
     "    iy = norm_phi * input_h\n",
     "\n",
-    "    ix = torch.where(ix >= input_w, ix - input_w, ix)\n",
-    "    iy = torch.where(iy >= input_h, iy - input_h, iy)\n",
+    "    ix = torch.remainder(ix, input_w)\n",
+    "    iy = torch.remainder(iy, input_h)\n",
     "    \n",
     "    return ix.cpu().numpy(), iy.cpu().numpy()\n",
     "\n",
-    "def create_equirectangler_to_left_and_right_map(input_w, input_h, output_sqr, y):\n",
+    "\n",
+    "def create_equirectangular_to_left_and_right_map(input_w, input_h, output_sqr, y):\n",
     "    x, z = torch.meshgrid(torch.linspace(-output_sqr, output_sqr-1, output_sqr), \n",
     "                          torch.linspace(-output_sqr, output_sqr-1, output_sqr),indexing='ij')\n",
     "    x, z = x.to(device), z.to(device)\n",
@@ -66,11 +67,11 @@
     "    ix = norm_theta * input_w\n",
     "    iy = norm_phi * input_h\n",
     "\n",
-    "    # Boundary handling\n",
-    "    ix = torch.where(ix >= input_w, ix - input_w, ix)\n",
-    "    iy = torch.where(iy >= input_h, iy - input_h, iy)\n",
+    "    ix = torch.remainder(ix, input_w)\n",
+    "    iy = torch.remainder(iy, input_h)\n",
     "    \n",
     "    return ix.cpu().numpy(), iy.cpu().numpy()\n",
+    "\n",
     "\n",
     "\n",
     "def create_cube_imgs_pad(img, margin=10):\n",
@@ -79,30 +80,30 @@
     "    normalized_f = 1\n",
     "\n",
     "    z = (output_sqr / normalized_f)\n",
-    "    bottom_map_x, bottom_map_y = create_equirectangler_to_bottom_and_top_map(input_w, input_h, output_sqr+margin*2, z)\n",
+    "    bottom_map_x, bottom_map_y = create_equirectangular_to_bottom_and_top_map(input_w, input_h, output_sqr+margin*2, z)\n",
     "    bottom_img = cv2.remap(img, bottom_map_x.astype(\"float32\"), bottom_map_y.astype(\"float32\"), cv2.INTER_CUBIC)\n",
     "\n",
     "    z = (-1) * (output_sqr / normalized_f)\n",
-    "    top_map_x, top_map_y = create_equirectangler_to_bottom_and_top_map(input_w, input_h, output_sqr+margin*2, z)\n",
+    "    top_map_x, top_map_y = create_equirectangular_to_bottom_and_top_map(input_w, input_h, output_sqr+margin*2, z)\n",
     "    top_img = cv2.remap(img, top_map_x.astype(\"float32\"), top_map_y.astype(\"float32\"), cv2.INTER_CUBIC)\n",
     "    top_img = cv2.flip(top_img, 0)\n",
     "\n",
     "    x = (-1) * (output_sqr / normalized_f)\n",
-    "    front_map_x, front_map_y = create_equirectangler_to_front_and_back_map(input_w, input_h, output_sqr+margin*2, x)\n",
+    "    front_map_x, front_map_y = create_equirectangular_to_front_and_back_map(input_w, input_h, output_sqr+margin*2, x)\n",
     "    front_img = cv2.remap(img, front_map_x.astype(\"float32\"), front_map_y.astype(\"float32\"), cv2.INTER_CUBIC)\n",
     "\n",
     "    x = output_sqr / normalized_f\n",
-    "    back_map_x, back_map_y = create_equirectangler_to_front_and_back_map(input_w, input_h, output_sqr+margin*2, x)\n",
+    "    back_map_x, back_map_y = create_equirectangular_to_front_and_back_map(input_w, input_h, output_sqr+margin*2, x)\n",
     "    back_img = cv2.remap(img, back_map_x.astype(\"float32\"), back_map_y.astype(\"float32\"), cv2.INTER_CUBIC)\n",
     "    back_img = cv2.flip(back_img, 1)\n",
     "\n",
     "    y = (-1) * (output_sqr / normalized_f)\n",
-    "    left_map_x, left_map_y = create_equirectangler_to_left_and_right_map(input_w, input_h, output_sqr+margin*2, y)\n",
+    "    left_map_x, left_map_y = create_equirectangular_to_left_and_right_map(input_w, input_h, output_sqr+margin*2, y)\n",
     "    left_img = cv2.remap(img, left_map_x.astype(\"float32\"), left_map_y.astype(\"float32\"), cv2.INTER_CUBIC)\n",
     "    left_img = cv2.rotate(left_img, cv2.ROTATE_90_CLOCKWISE)\n",
     "\n",
     "    y = output_sqr / normalized_f\n",
-    "    right_map_x, right_map_y = create_equirectangler_to_left_and_right_map(input_w, input_h, output_sqr+margin*2, y)\n",
+    "    right_map_x, right_map_y = create_equirectangular_to_left_and_right_map(input_w, input_h, output_sqr+margin*2, y)\n",
     "    right_img = cv2.remap(img, right_map_x.astype(\"float32\"), right_map_y.astype(\"float32\"), cv2.INTER_CUBIC)\n",
     "    right_img = cv2.flip(right_img, 1)\n",
     "    right_img = cv2.rotate(right_img, cv2.ROTATE_90_COUNTERCLOCKWISE)\n",
@@ -112,7 +113,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_cube_map(back_img, bottom_img, front_img, left_img, right_img, top_img, output_sqr):\n",
+    "    cube_map_img = np.zeros((3 * output_sqr, 4 * output_sqr, 3))\n",
+    "    cube_map_img[output_sqr:2*output_sqr, 3*output_sqr:4*output_sqr] = back_img\n",
+    "    cube_map_img[2*output_sqr:3*output_sqr, output_sqr:2*output_sqr] = bottom_img\n",
+    "    cube_map_img[output_sqr:2*output_sqr, output_sqr:2*output_sqr] = front_img\n",
+    "    cube_map_img[output_sqr:2*output_sqr, 0:output_sqr] = left_img\n",
+    "    cube_map_img[output_sqr:2*output_sqr, 2*output_sqr:3*output_sqr] = right_img\n",
+    "    cube_map_img[0:output_sqr, output_sqr:2*output_sqr] = top_img\n",
+    "    return cube_map_img"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +146,7 @@
        "True"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,8 +155,8 @@
     "image_path = \"../data/example/farm4/O.png\"\n",
     "img = cv2.imread(image_path)\n",
     "print(img.shape, type(img))\n",
-    "[back_img, bottom_img, front_img, left_img, right_img, top_img], output_sqr = create_cube_imgs_pad(img)\n",
-    "#cube_map_img = create_cube_map(back_img, bottom_img, front_img, left_img, right_img, top_img, output_sqr)\n",
+    "[back_img, bottom_img, front_img, left_img, right_img, top_img], output_sqr = create_cube_imgs_pad(img, margin=0)\n",
+    "cube_map_img = create_cube_map(back_img, bottom_img, front_img, left_img, right_img, top_img, output_sqr)\n",
     "\n",
     "cv2.imwrite(f\"{OUTPUT_DIR}bottom.png\", bottom_img)\n",
     "cv2.imwrite(f\"{OUTPUT_DIR}top.png\", top_img)\n",
@@ -146,7 +164,7 @@
     "cv2.imwrite(f\"{OUTPUT_DIR}back.png\", back_img)\n",
     "cv2.imwrite(f\"{OUTPUT_DIR}left.png\", left_img)\n",
     "cv2.imwrite(f\"{OUTPUT_DIR}right.png\", right_img)\n",
-    "#cv2.imwrite(f\"{OUTPUT_DIR}cube_map.png\", cube_map_img)"
+    "cv2.imwrite(f\"{OUTPUT_DIR}cube_map.png\", cube_map_img)"
    ]
   },
   {
@@ -158,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
