ablation rotation ok

--- a/making_tracking_data.ipynb
+++ b/making_tracking_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,16 +10,17 @@
     "import os\n",
     "\n",
     "# 動画ファイルのパス\n",
-    "video_path = './data/tracking/movie/farm3.mp4'\n",
+    "video_path = './data/tracking/movie/farm2.mp4'\n",
     "\n",
     "# 画像を保存するディレクトリ\n",
-    "output_dir = './data/tracking/farm3'\n",
+    "output_dir = './data/tracking/farm2'\n",
     "os.makedirs(output_dir, exist_ok=True)\n",
     "\n",
     "# 動画ファイルを読み込む\n",
     "cap = cv2.VideoCapture(video_path)\n",
     "\n",
     "frame_index = 0\n",
+    "start_frame = 500\n",
     "image_index = 1\n",
     "desired_size = (1024, 512)  # リサイズ後の解像度\n",
     "max_images = 100  # 保存する最大画像数\n",
@@ -28,10 +29,12 @@
     "while True:\n",
     "    # フレームを読み込む\n",
     "    ret, frame = cap.read()\n",
-    "\n",
     "    # フレームがない場合はループを抜ける\n",
     "    if not ret:\n",
     "        break\n",
+    "    if frame_index < start_frame:\n",
+    "        frame_index += 1\n",
+    "        continue\n",
     "\n",
     "    # 3フレームごとに画像を保存\n",
     "    if frame_index % frame_interval == 0:\n",
